fix broken styles

--- a/app/styles/components/_nav.scss
+++ b/app/styles/components/_nav.scss
@@ -1,12 +1,14 @@
+.top-bar, .top-bar ul {
+  background-color: $nav-background;
+}
+
 .top-bar {
   padding-bottom: 0px;
 
-  .top-bar ul {
-    background-color: $nav-background;
-  }
   .menu-text {
     color: $nav-text-color;
   }
+
   .active-link {
     font-weight: bold;
   }
